--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* Application-wide Styles */
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+
 h1 {
     color: #369;
     font-family: Arial, Helvetica, sans-serif;
@@ -19,7 +21,7 @@ h1 {
   button {
     background-color: #eee;
     border: none;
-    border-radius: 4px;
+    border-radius: none;
     cursor: pointer;
     color: black;
     font-size: 1.2rem;
@@ -42,3 +44,5 @@ h1 {
   * {
     font-family: Arial, Helvetica, sans-serif;
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
