--- a/src/app/count-down/count-down.component.html
+++ b/src/app/count-down/count-down.component.html
@@ -4,7 +4,7 @@
     </mat-toolbar>
 
     <div class="content">
-        <h1>Start Timer For Next Hint</h1>
+        <h1>Only hit the start button for next link</h1>
         <div class="row timer-section">
             <div class="col-md-12 mat-elevation-2">
                 <mat-card>
@@ -33,6 +33,7 @@
         </div>
 
         <div class="link-grid">
+            <h3>Ca:F5SzB4vYjQkqadmjoWDMMa5nBkaBPuMqDET6kBppump</h3>
             <mat-grid-list cols="3" rowHeight="1:1">
                 <mat-grid-tile>
                   <button mat-fab color="accent" (click)="openLink('github')">
