--- a/src/app/count-down/count-down.component.html
+++ b/src/app/count-down/count-down.component.html
@@ -4,7 +4,7 @@
     </mat-toolbar>
 
     <div class="content">
-        <h1>Only hit the start button for next link</h1>
+        <h1>Only hit the start button for next hint</h1>
         <div class="row timer-section">
             <div class="col-md-12 mat-elevation-2">
                 <mat-card>
