--- a/src/app/count-down/count-down.component.html
+++ b/src/app/count-down/count-down.component.html
@@ -36,17 +36,17 @@
             <h3>Ca:F5SzB4vYjQkqadmjoWDMMa5nBkaBPuMqDET6kBppump</h3>
             <mat-grid-list cols="3" rowHeight="1:1">
                 <mat-grid-tile>
-                  <button mat-fab color="accent" (click)="openLink('github')">
+                  <button mat-mini-fab color="accent" (click)="openLink('github')">
                     <mat-icon>facebook</mat-icon>
                   </button>
                 </mat-grid-tile>
                 <mat-grid-tile>
-                  <button mat-fab color="accent" (click)="openLink('linkedin')">
+                  <button mat-mini-fab color="accent" (click)="openLink('linkedin')">
                     <mat-icon>twitter</mat-icon>
                   </button>
                 </mat-grid-tile>
                 <mat-grid-tile>
-                  <button mat-fab color="accent" (click)="openLink('email')">
+                  <button mat-mini-fab color="accent" (click)="openLink('email')">
                     <mat-icon>dexscreener</mat-icon>
                   </button>
                 </mat-grid-tile>
