--- a/src/app/count-down/count-down.component.scss
+++ b/src/app/count-down/count-down.component.scss
@@ -114,13 +114,13 @@ h1{
         width: 95%; /* Ensure cards are responsive on small screens */
         max-width: none;
       }
-    // .link-grid {
-    //   max-width: 100%;
-    // }
-    // button {
-    //   transform: scale(1.2);
-    // }
-    // button:hover {
-    //   transform: scale(1.3);
-    // }
+    .link-grid {
+      max-width: 100%;
+    }
+    button {
+      transform: scale(0.7);
+    }
+    button:hover {
+      transform: scale(0.9);
+    }
   }
